--- a/package.json
+++ b/package.json
@@ -106,13 +106,16 @@
     "node-gyp": "^10.2.0",
     "node-ical": "^0.16.1",
     "prettier": "^2.8.6",
+    "prisma-kysely": "^1.8.0",
     "prismock": "^1.33.4",
     "resize-observer-polyfill": "^1.5.1",
+    "ts-node": "^10.9.2",
     "tsc-absolute": "^1.0.0",
     "typescript": "^5.7.2",
     "vitest": "^2.1.1",
     "vitest-fetch-mock": "^0.3.0",
-    "vitest-mock-extended": "^2.0.2"
+    "vitest-mock-extended": "^2.0.2",
+    "zod-prisma": "^0.5.4"
   },
   "dependencies": {
     "@daily-co/daily-js": "^0.76.0",
